--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@
 # DATA SOURCE
 # ===============================
 # To persistence data storage
-spring.datasource.url=jdbc:h2:./data/exchange;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
+spring.datasource.url=jdbc:h2:mem:exchange
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=exchange
-spring.datasource.password=exchange
+spring.datasource.username=user
+spring.datasource.password=pass
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 # To see browser
